# RepoGuardian

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: maintainer-bug.md  repo-health-regression.md
.github/workflows/: daily-maintenance.yml  manual-run.yml  publish-status-site.yml  pull-request-validation.yml  sync-hf-space.yml
deploy/huggingface/: Dockerfile  README.md  start.sh
deploy/huggingface/webapp/: main.py  scanner.py
matrix_maintainer/: __main__.py  cli.py  constants.py  main.py  models.py  settings.py
matrix_maintainer/analyzers/: health_analyzer.py  repo_analyzer.py
matrix_maintainer/execution/: install_runner.py  start_runner.py  test_runner.py
matrix_maintainer/gitpilot/: client.py  patcher.py  planner.py  pr_manager.py
matrix_maintainer/healing/: failure_classifier.py  fix_strategies.py  healing_loop.py
matrix_maintainer/inventory/: filters.py  huggingface_discovery.py  org_discovery.py  repo_inventory.py
matrix_maintainer/matrixlab/: executor.py  sandbox.py  verifier.py
matrix_maintainer/providers/: base.py
matrix_maintainer/reporting/: history_builder.py  incident_builder.py  infra_status.py  markdown_reports.py  repo_status.py  status_builder.py
matrix_maintainer/standards/: huggingface_rules.py  makefile_rules.py  pyproject_rules.py
repoguardian/: __main__.py  cli.py  constants.py  main.py  models.py  settings.py
repoguardian/analyzers/: health_analyzer.py  repo_analyzer.py  space_analyzer.py
repoguardian/execution/: install_runner.py  start_runner.py  test_runner.py
repoguardian/gitpilot/: client.py  patcher.py  planner.py  pr_manager.py
repoguardian/healing/: failure_classifier.py  fix_strategies.py  healing_loop.py  space_healer.py
repoguardian/inventory/: filters.py  github_discovery.py  gitlab_discovery.py  huggingface_discovery.py  repo_inventory.py
repoguardian/llm/: ollabridge_client.py
repoguardian/matrixlab/: executor.py  sandbox.py  verifier.py
repoguardian/providers/: base.py
repoguardian/reporting/: history_builder.py  incident_builder.py  infra_status.py  markdown_reports.py  repo_status.py  status_builder.py
repoguardian/site/: generator.py
repoguardian/standards/: huggingface_rules.py  makefile_rules.py
scripts/: backfill_history.py  publish_site.py  run_daily.py  seed_repo_inventory.py
tests/: conftest.py
tests/integration/: test_daily_run.py  test_gitpilot_client.py  test_matrixlab_executor.py  test_publish_site.py
tests/unit/: test_gitlab_discovery.py  test_healing_loop.py  test_health_rules.py  test_inventory.py  test_makefile_rules.py  test_ollabridge_client.py  test_pyproject_rules.py  test_site_generator.py  test_status_builder.py
