[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoguardian"
version = "2.0.0"
description = "Autonomous health verification, repair, and governance for GitHub, GitLab, and Hugging Face repositories."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
authors = [{name = "Ruslan Magana Vsevolodovna"}]
keywords = ["devops", "repository", "health", "automation", "github", "gitlab", "huggingface", "ci-cd"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "PyGithub>=2.3.0",
  "GitPython>=3.1.43",
  "Jinja2>=3.1.4",
  "PyYAML>=6.0.2",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "tenacity>=8.5.0",
  "packaging>=24.1",
  "huggingface_hub>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
]
gitlab = [
  "python-gitlab>=4.0.0",
]
ollabridge = [
  "httpx>=0.27.0",
]
all = [
  "repoguardian[dev,gitlab,ollabridge]",
]

[project.scripts]
repoguardian = "repoguardian.cli:app"
matrix-maintainer = "repoguardian.cli:app"

[project.urls]
Homepage = "https://github.com/ruslanmv/RepoGuardian"
Documentation = "https://github.com/ruslanmv/RepoGuardian#readme"
Repository = "https://github.com/ruslanmv/RepoGuardian"
"Bug Tracker" = "https://github.com/ruslanmv/RepoGuardian/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["repoguardian*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
]
